fixed alignment issues

--- a/app/styles/information.scss
+++ b/app/styles/information.scss
@@ -258,7 +258,7 @@ $icon-height: 45px;
         text-align: center;
         color: white;
         border-radius: 100px;
-        padding: 0px 10px;
+        padding: 2px 10px;
         opacity: 0.9;
       }
 
